package ubx.archilog.controller;

public class BagOfCommands {
  public void addCommand() {}

  public void executeOne() {}

  public void executeAll() {}
}
