package ubx.archilog.controller;

public interface Command {
  void execute();

  void undo();
}
