package ubx.archilog.model;

public interface ShapeObserver {
  void update();
}
