package ubx.archilog.model;

public interface Shape {
  void drawLine();

  void drawRectangle();

  void drawCircle();

  void drawSquare();

  void scale();

  void rotate();

  void translate();
}
