package ubx.archilog.model.io;

public interface FileBuilder {}
