package ubx.archilog.model.visitor;

public class DrawVisitor implements ShapeVisitor {}
