package ubx.archilog.view;

public interface Render {
  void createMenu();

  void createToolbar();

  void createCanva();
}
