package ubx.archilog.view.editor;

import ubx.archilog.model.Shape;

public interface ShapeEditor {
  void edit(Shape shape);
}
